--- a/src/pages/Contact/styles/contact.css
+++ b/src/pages/Contact/styles/contact.css
@@ -46,6 +46,26 @@
   border-bottom-right-radius: 16px;
 }
 
+.contactCardSkeleton {
+  border-bottom: thin solid #ddd; 
+  display: flex;
+  border-radius: 0;
+  height: 80px;
+  padding: 16px 24px;
+  justify-content: space-between;
+  width: auto;
+  transition: .3s;
+}
+.contactCardSkeleton:first-child {
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+.contactCardSkeleton:last-child {
+  border-bottom: 0;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+}
+
 .contactActionBtn {
   align-self: center;
   border-radius: 1.2rem;
@@ -69,6 +89,7 @@
   aspect-ratio: 1 / 1;
   width: 100%;
   border-radius: 3rem;
+  object-fit: cover;
   padding: 3px;
   border: 2px solid #0d6efd;
 }
@@ -101,4 +122,11 @@
   overflow: hidden !important;
   white-space: nowrap !important;
   width: calc(100%); 
+}
+
+.contactInfoContainerSkeleton {
+  display: inline-block;
+  align-self: center;
+  margin-left: 24px;
+  flex: 1;
 }
