--- a/src/pages/ContactDetail/styles/contactDetail.css
+++ b/src/pages/ContactDetail/styles/contactDetail.css
@@ -12,16 +12,17 @@
 
 .contactDetailAva {
   aspect-ratio: 1 / 1;
-  width: 156px;
-  border-radius: 8rem;
-  padding: 6px;
   border: 2px solid #fff;
+  border-radius: 8rem;
+  object-fit: cover;
+  padding: 6px;
+  width: 156px;
 }
 
 .contactDetailAvaContainer {
-  justify-content: center;
   align-self: center;
   display: flex;
+  justify-content: center;
   padding: 0 0 24px;
   transition: .3s;
   width: 100%;
@@ -32,6 +33,11 @@
   padding: 0 24px;
   max-width: 286px;
   color: #fff;
-  display: 'flex';
   justify-content: center;
+}
+
+.contactDetailNameContainerSkeleton {
+  padding: 0 128px;
+  color: #fff;
+  margin-bottom: 12px;
 }
